<resources>
    <string name="app_name">PanoramicAgriculture</string>
    <string name="year"><u>年度产量</u></string>
    <string name="month"><u>本月产量</u></string>
    <string name="week"><u>本周产量</u></string>
    <string name="skip">Skip</string>
    <string name="please_try_again">Please try again</string>
    <string name="load_failed">Load Failed</string>
    <string name="invalid_network">Invalid Network</string>
    <string name="load_no_more">Load No More</string>
    <string name="refreshing">Refreshing</string>
    <string name="loading">Loading...</string>
    <string name="please_input_password">Please Input Password</string>
    <string name="please_input_your_username">Please Input Your Username</string>
    <string name="not_logged">Not logged</string>
    <string name="Login">Login</string>
    <string name="Cancel">Cancel</string>
    <string name="register">Register</string>
    <string name="no_register">Register Now</string>
    <string name="please_input_your_nickname">Please Input Your Nickname</string>
    <string name="sex">Sex</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="role">Role</string>
    <string name="farmer">Farmer</string>
    <string name="buyer">Saler</string>
    <string name="please_input_your_phone_number">Please Input Your Phone Number</string>
    <string name="please_input_your_identity_number">Please Input Your Identity Number</string>
    <string name="my_farm">My Farm</string>
    <string name="my_purchaser">My Saler</string>
    <string name="others">Others</string>
    <string name="new_farm">New Farm</string>
    <string name="please_input_your_farmname">Please Input Your Farm Name</string>
    <string name="please_input_your_farm_totalArea">Please Input Your Farm Total Area</string>
    <string name="please_input_your_farm_address">Please Input Your Farm Address</string>
    <string name="please_input_your_farm_crops">Crops</string>
    <string name="save">Save</string>
    <string name="save_succeed">save_succeed</string>
    <string name="register_succeed">register_succeed</string>
    <string name="start_new">Start to New</string>
    <string name="purchasing_point_name">purchasing_point_name</string>
    <string name="purchasing_point_address">purchasing_point_address</string>
    <string name="please_input_your_specific_address">specific address</string>
    <string name="new_purchasing_point">new_purchasing_point</string>
    <string name="log_off">Log Off</string>
    <string name="setting">Setting</string>
    <string name="add_purchase_info">采购信息</string>
    <string name="unit_price">采购单价 (元/kg)</string>
    <string name="select_purchase_crops">请选择采购农作物</string>
    <string name="crops">农作物</string>
    <string name="price_purchase">预计采购总量 (斤)</string>
    <string name="purchase_time">采购时间</string>
    <string name="ofday">按天</string>
    <string name="ofmonth">按月份</string>
    <string name="ofseason">按季度</string>
    <string name="pre_purchase_time">预定采购时间</string>
    <string name="select_pre_purchase_time">请选择预定采购时间</string>
    <string name="harvest_price">收获单价 (元/kg)</string>
    <string name="harvest_all">收获总量 (斤)</string>
    <string name="harvest_time">收获时间</string>
    <string name="pre_harvest_time">预定收获时间</string>
    <string name="select_pre_harvest_time">请选择预定收获时间</string>
    <string name="harvest_info">收获信息</string>
    <string name="manager_farm">Manager Farm</string>
    <string name="farm_crop">Farm crops</string>
    <string name="all_farm">All Farm</string>
    <string name="settings_show_all_icon">Show all icons on map</string>
    <string name="settings_show_farm_icon">Show farm icons on map</string>
    <string name="settings_show_purchaser_icon">Show purchaser icons on map</string>
    <string name="unknown">Unknown</string>
    <string name="farm_main_title">农场概况</string>
    <string name="farm_main_list_title1">已种农作物</string>
    <string name="farm_main_list_title2">我的土地</string>
    <string name="farm_main_list_title3">农场面积</string>
    <string name="farm_main_list_title4">合作采购方</string>
    <string name="farm_main_list_title5">联系方式</string>
    <string name="farm_main_layout_info">农场简介</string>
    <string name="farm_main_menu_action1">编辑农场</string>
    <string name="farm_detail_title">农场收获信息</string>
    <string name="farm_detail_list_title1">编号</string>
    <string name="farm_detail_list_title2">实际数量</string>
    <string name="farm_detail_list_title3">需求数量</string>
    <string name="farm_detail_list_title4">需求时间</string>
    <string name="farm_detail_list_title5">总价：</string>
    <string name="farm_detail_list_title6">删除</string>
    <string name="farm_detail_list_title7">编辑实际采购量</string>
    <string name="farm_detail_list_title8">编辑需求采购量</string>
    <string name="farm_detail_list_sale_num_title">销售数量</string>
    <string name="farm_detail_list_sale_time_title">销售时间</string>
    <string name="purchase_main_title">销售点</string>
    <string name="purchase_main_list_title1">已采购农作物</string>
    <string name="purchase_main_list_title2">销售点</string>
    <string name="purchase_main_list_title3">联系方式</string>
    <string name="purchase_main_layout_info">销售点简介</string>
    <string name="purchase_main_menu_action1">编辑采购商</string>
    <string name="purchase_detail_title">采购信息</string>
    <string name="point_list_revoke_success">删除成功</string>
    <string name="edit_purchasing_point">edit_purchasing_point</string>
    <string name="edit_farm_point">edit_farm_point</string>
    <string name="incorrect_address_format">incorrect_address_format</string>
    <string name="farm_num">farm num</string>
    <string name="purchaser_num">purchaser_num</string>
    <string name="purchase_crops_title">purchase_crops_title</string>
    <string name="all_purchaser">all_purchaser</string>
    <string name="company_name">橙 红 科 技</string>
    <string name="brief_introduction">brief introduction</string>
    <string name="upload_picture">upload picture</string>
    <string name="brief_too_long">brief_too_long</string>
    <string name="purchase_fact_count">实际采购量 (斤)</string>
    <string name="set_field">set_field</string>
    <string name="need_purchase_count">需求采购量 (斤)</string>
    <string name="expectHarvestNum">预期收获量</string>
    <string name="plantNum">种植数量</string>
    <string name="plantTime">种植时间</string>
    <string name="harvestTime">预期收获时间</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_edit_plant">EditPlantActivity</string>
    <string name="next_plant">new plant</string>
    <string name="next_plant_time">new plant time</string>
    <string name="no_sowing">no sowing</string>
    <string name="mature_degree">matureDegree</string>
    <string name="farm_field">田块名称</string>
    <string name="quit_app_message">再按一次退出应用</string>
    <string name="new_user">new user</string>
    <string name="DC">DC</string>
    <string name="new_dc">new DC</string>
    <string name="edit_dc_point">edit_dc_point</string>
    <string name="please_input_your_dc_coverage_area">dc coverage area</string>
    <string name="my_dc">MY DC</string>
    <string name="dc_num">DC num</string>
    <string name="dc_crops_title">dc_crops_title</string>
    <string name="dc_main_title">配送中心概况</string>
    <string name="menu_title">图表数据</string>
</resources>
