<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register">

    <include
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        android:id="@+id/settings_show_icon_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        android:orientation="vertical">
        <RadioButton
            android:id="@+id/settings_show_all_icon_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/settings_show_all_icon"/>
        <RadioButton
            android:id="@+id/settings_show_farm_icon_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/settings_show_farm_icon"/>
        <RadioButton
            android:id="@+id/settings_show_purchaser_icon_rbtn"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:text="@string/settings_show_purchaser_icon"/>
    </RadioGroup>

</LinearLayout>