<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:background="@drawable/bg_register"
    android:orientation="vertical">

    <include
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="-24dp"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="20dp"
                android:paddingRight="20dp">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_username"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/please_input_your_username"
                        android:textSize="@dimen/login_form_text" />
                </android.support.design.widget.TextInputLayout>

                <FrameLayout
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center">

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <android.support.design.widget.TextInputEditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/please_input_password"
                            android:inputType="textPassword"
                            android:textSize="@dimen/login_form_text" />
                    </android.support.design.widget.TextInputLayout>

                    <Button
                        android:id="@+id/show_password_button"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:layout_gravity="right|center_vertical"
                        android:layout_marginRight="10dp"
                        android:background="@mipmap/show_password"
                        android:visibility="invisible" />
                </FrameLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_nickname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/please_input_your_nickname"
                        android:textSize="@dimen/login_form_text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_phoneNum"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/please_input_your_phone_number"
                        android:inputType="phone"
                        android:textSize="@dimen/login_form_text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_identityNumber"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/please_input_your_identity_number"
                        android:textSize="@dimen/login_form_text" />
                </android.support.design.widget.TextInputLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/role"
                        android:textSize="@dimen/login_form_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textSize="@dimen/login_form_text" />

                    <RadioGroup
                        android:id="@+id/radioGroupRole"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/role"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioFarmer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/farmer"></RadioButton>

                        <RadioButton
                            android:id="@+id/radioBuyer"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buyer"></RadioButton>

                        <RadioButton
                            android:id="@+id/radioDC"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/DC"></RadioButton>
                    </RadioGroup>
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/activity_vertical_margin"
                    android:visibility="visible">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/sex"
                        android:textSize="@dimen/login_form_text" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text=":"
                        android:textSize="@dimen/login_form_text" />

                    <RadioGroup
                        android:id="@+id/radioGroupSex"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:contentDescription="@string/sex"
                        android:orientation="horizontal">

                        <RadioButton
                            android:id="@+id/radioMale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:checked="true"
                            android:text="@string/male"></RadioButton>

                        <RadioButton
                            android:id="@+id/radioFemale"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/female"></RadioButton>
                    </RadioGroup>
                </LinearLayout>

                <Button
                    android:id="@+id/btn_submit"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/selector_shape_button"
                    android:text="@string/register"
                    android:textSize="@dimen/login_submit_text" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>