<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_field_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_field_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_your_farmname"
            android:textColor="@color/black"
            android:textSize="@dimen/login_form_text" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/til_field_area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/et_field_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_your_farm_totalArea"
            android:inputType="number"
            android:textColor="@color/black"
            android:textSize="@dimen/login_form_text" />
    </android.support.design.widget.TextInputLayout>


    <Button
        android:id="@+id/btn_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginTop="10dp"
        android:background="@drawable/selector_shape_button"
        android:text="@string/save"
        android:textSize="@dimen/login_submit_text" />
</LinearLayout>