<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_register"
    android:orientation="vertical">

    <include
        layout="@layout/title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible" />

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <ImageView
            android:id="@+id/activity_welcome_logo_img"
            android:layout_width="96dp"
            android:layout_height="96dp"
            android:layout_gravity="center_horizontal|bottom"
            android:scaleType="fitCenter"
            android:layout_marginBottom="24dp"
            android:src="@mipmap/ic_logo" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/et_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_your_username"
                android:textSize="@dimen/login_form_text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/til_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/please_input_password"
                android:inputType="textPassword"
                android:textSize="@dimen/login_form_text" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btn_submit"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:background="@drawable/bg_login_btn_pressed"
                android:text="@string/Login"
                android:textSize="@dimen/login_submit_text" />
            <LinearLayout
                android:layout_width="48dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"></LinearLayout>
            <Button
                android:id="@+id/btn_cancel_login"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:background="@drawable/bg_login_btn_normal"
                android:text="@string/Cancel"
                android:textSize="@dimen/login_submit_text" />
        </LinearLayout>


    </LinearLayout>

    <TextView
        android:id="@+id/tv_no_register"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:layout_marginBottom="24dp"
        android:layout_gravity="center_horizontal|bottom"
        android:gravity="center"
        android:text="@string/no_register"
        android:visibility="gone"/>

</LinearLayout>